# root

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml  generate-docs.yml  generate-release.yml  ghcr-deploy.yml  host-documentation.yml  lint.yml  shuttle-run.yml
docs/: 1-overview.md  1-root-graphql-backend-overview.md  1.1-system-architecture.md  2-project-setup.md  2-system-architecture.md  2.1-application-configuration.md  2.1-environment-configuration.md  3-data-models.md  3-database-models.md  3.1-member-model.md  3.2-attendance-model.md  3.2-attendance-models.md  3.3-status-update-streak-model.md  3.3-streak-model.md  3.4-project-model.md  4-graphql-api.md  4.1-graphql-queries.md  4.1-member-queries-and-mutations.md  4.1.1-member-queries.md  4.1.2-attendance-queries.md  4.1.3-streak-queries.md  4.1.4-project-queries.md  4.2-attendance-queries-and-mutations.md  4.2-graphql-mutations.md  4.2.1-member-mutations.md  4.2.2-attendance-mutations.md  4.2.3-streak-mutations.md  4.2.4-project-mutations.md  4.3-streak-queries-and-mutations.md  4.4-project-queries-and-mutations.md  5-attendance-system.md  5-background-tasks.md  5.1-daily-attendance-task.md  5.2-attendance-security.md  6-cicd-and-deployment.md  6-deployment-and-cicd.md  6.1-docker-deployment.md  6.1-github-actions-workflows.md  6.2-code-quality-and-releases.md  6.2-docker-deployment.md  (+11 more)
migrations/: 20240626151806_create_members.sql  20240627145806_create_member_table.sql  20240701161049_add_default_attendance_column.sql  20240711150547_add_mac.sql  20240813125650_rename_present_to_ispresent.sql  20240813130838_rename_present_to_isPresent.sql  20240813131821_rename_present_to_isPresent.sql  20240813132052_rename_present_to_is_present.sql  20241017154637_add_discord_id_field.sql  20241126123155_adding_streaks.sql  20241126162522_add_member_group.sql  20241128224140_add_streak_relation.sql  20241129193435_remove_streks_from_membertable.sql  20241129195234_drop_old_streak_table.sql  20241129200327_drop_strek_update.sql  20241129200519_recreate_streaks.sql  20241201203531_leetcode_tables.sql  20241202102757_leetcode_tables_add_constraint.sql  20241226065211_add_attendance_strak_and_projects.sql  20241226074423_attendance_streak_constraint.sql  20250114180047_create_tables.sql  20250124095543_create_project_table.sql  20250502200733_status_update_history.sql  20250505151340_auth.sql
src/: lib.rs  main.rs  routes.rs
src/api_key/: mod.rs
src/attendance/: daily_task.rs  mod.rs  scheduled_task.rs
src/auth/: mod.rs
src/daily_task/: daily_task.rs  mod.rs
src/database_seeder/: mod.rs  seed.sql
src/db/: attendance.rs  leaderboard.rs  member.rs  mod.rs
src/graphql/: mod.rs  mutations.rs  query.rs
src/graphql/mutations/: attendance_mutations.rs  member_mutations.rs  mod.rs  project_mutations.rs  streak_mutations.rs
src/leaderboard/: fetch_stats.rs  mod.rs  update_leaderboard.rs
src/models/: api_key.rs  attendance.rs  member.rs  mod.rs  project.rs  projects.rs  status_update_streak.rs
tests/: integration_tests.rs
(+6 files in other folders)
