[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.6", features = ["chrono"] }
async-graphql-axum = "7.0.6"
axum = "0.7.3"
chrono = "0.4.38"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["chrono"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }                       # For async tests
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
chrono-tz = "0.10.0"
serde_json = "1.0"
reqwest = { version = "0.11.27", features = ["json"] }
config = "0.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
