[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.15", features = ["chrono"] }
async-graphql-axum = "7.0.6"
axum = "0.8.1"
chrono = { version = "0.4.38", features = ["clock"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.28.2", features = ["default", "macros", "rt-multi-thread", "signal"] }                       # For async tests
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
chrono-tz = "0.10.1"
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
config = "0.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "fmt", "std"] }
dotenv = "0.15.0"
time = { version = "0.3.37", features = ["formatting"] }
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
tracing-core = "0.1.33"
tracing-opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
