[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.15", features = ["chrono"] }
async-graphql-axum = "7.0.6"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.38", features = ["clock"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.28.2", features = ["default", "macros", "rt-multi-thread"] }                       # For async tests
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
tower-http = { version = "0.6.1", features = ["cors"] }
tower = "0.5.1"
chrono-tz = "0.10.1"
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json"] }
config = "0.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "fmt", "std"] }
dotenv = "0.15.0"
time = { version = "0.3.37", features = ["formatting"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
url = "2.5.4"
bcrypt = "0.17.0"
rand = "0.9.1"
base64 = "0.22.1"
